[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Tree3.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Tree1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Tree2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Tree.gd" type="Script" id=4]
[ext_resource path="res://Sounds/woodcut.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.24676, 13.2661 )

[node name="Tree" type="Area2D" groups=[
"tree",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.302139, -4.66299 )
shape = SubResource( 1 )

[node name="Tree1" type="Sprite" parent="."]
visible = false
position = Vector2( -12.39, -50 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Tree2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Tree3" type="Sprite" parent="."]
position = Vector2( 21.058, -57 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="woodcut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
